--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -10,7 +10,7 @@
 @MISC{fmSignalkunde,
   author = "Detlef Mietke",
   title = "Frequenzmodulation",
-  howpublished = {ttp://elektroniktutor.de/signalkunde/fm.html},
+  howpublished = {http://elektroniktutor.de/signalkunde/fm.html},
   year = "Stand 31.05.2015"
   }
 
